tests/scripts/errors/lex/unexpected_char_dollar.cdo
VAR $x = 10;
print($x);
